--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <img id="logo-img" src="/imagens/Nossa.jpeg" alt="">
+                <img id="logo-img" src="imagens/Nossa.jpeg" alt="">
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
